大部分好了，微调模式

--- a/GC_customer_controller_v3/MDK-ARM/.vscode/settings.json
+++ b/GC_customer_controller_v3/MDK-ARM/.vscode/settings.json
@@ -10,6 +10,7 @@
         "crc.h": "c",
         "crc8_crc16.h": "c",
         "nrf24l01.h": "c",
-        "cmath": "c"
+        "cmath": "c",
+        "scara_kinematics.h": "c"
     }
 }
