--- a/GC_customer_controller_v3/MDK-ARM/GC_customer_controller_v3.uvprojx
+++ b/GC_customer_controller_v3/MDK-ARM/GC_customer_controller_v3.uvprojx
@@ -898,6 +898,11 @@
               <FileType>1</FileType>
               <FilePath>..\user\judge_system.c</FilePath>
             </File>
+            <File>
+              <FileName>scara_kinematics.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\user\scara_kinematics.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
